Update Image Source

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -132,7 +132,7 @@
                                     </div>
                                 </td>
                                 
-                                <td style="text-align: center;" id="e_high"><img width="50" height="50" src="~/images/e_high.png" /></td>
+                                <td style="text-align: center;" > <label id="e_high"><img width="50" height="50" src="~/images/e_high.png" /></label></td>
                                 <td style="text-align: center; vertical-align: middle ">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="Resilent">
@@ -144,9 +144,9 @@
                             <tr>
                                 @*<td><label class="rotate">Climate</label></td>*@
                                 <td style="text-align:center;vertical-align: middle" class="rotate">Climate</td>
-                                <td style="text-align: center;" id="c_low"><img width="50" height="50" src="~/images/c_low.png" /></td>
+                                <td style="text-align: center;">  <label id="c_low"><img width="50" height="50" src="~/images/c_low.png" /></label></td>
                                 <td><img height="50" width="80" src="~/images/xy.png" /></td>
-                                <td style="text-align: center;" id="c_high"><img width="50" height="50" src="~/images/c_high.png" /></td>
+                                <td style="text-align: center;"> <label id="c_high"><img width="50" height="50" src="~/images/c_high.png" /></label></td>
                                 <td style="text-align:center;vertical-align: middle" class="rotate">Climate</td>
                             </tr>
 
@@ -158,7 +158,7 @@
                                         <label class="custom-control-label" for="Moderate" data-toggle="tooltip" data-placement="top" title="Moderate">Moderate</label>
                                     </div>
                                 </td>
-                                <td style="text-align: center;" id="e_low"><img width="50" height="50" src="~/images/e_low.png" /></td>
+                                <td style="text-align: center;"><label id="e_low"><img width="50" height="50" src="~/images/e_low.png" /></label></td>
                                 <td style="text-align: center;vertical-align: middle">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="Active">
