--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,8 +42,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2019 - MetaModelCoreApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container-fluid">
+            Copyright @DateTime.Now.Year - All Rights Reserved By Metamodel Dashboard Team
+           
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
