--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Metamodel Dashboard</title>
+
+    <link rel="shortcut icon" type="image/x-icon" href="~/images/logo.PNG">
+    <link rel="icon" type="image/ico" href="~/images/logo.PNG" />
+    <link rel="apple-touch-icon" href="~/images/logo.PNG">
+
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     @RenderSection("Styles", required: false)
