--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -292,9 +292,12 @@
 
         </div>
 
+
+
+
         <div class="row">
             <div  class="col-md-6">
-                <a href="" title="Go To Map"><img class="float-left" style="width:15%" src="~/images/map-icon.png" /></a>
+                <a href="MetaModel/Home/MapView" title="Go To Map"><img class="float-left" style="width:15%" src="~/images/map-icon.png" /></a>
             </div>
 
             <div class="col-md-6">
