--- a/Views/Home/MapView.cshtml
+++ b/Views/Home/MapView.cshtml
@@ -3,7 +3,6 @@
     ViewData["Title"] = "MapView";
 }
 
-
 @section Styles {
 
 
@@ -52,6 +51,33 @@
         #mapid {
             height: 400px;
         }
+
+        .legend {
+            line-height: 18px;
+            color: #555;
+        }
+
+            .legend i {
+                width: 18px;
+                height: 18px;
+                float: left;
+                margin-right: 8px;
+                opacity: 0.7;
+            }
+
+        .info {
+            padding: 6px 8px;
+            font: 14px/16px Arial, Helvetica, sans-serif;
+            background: white;
+            background: rgba(255,255,255,0.8);
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            border-radius: 5px;
+        }
+
+            .info h4 {
+                margin: 0 0 5px;
+                color: #777;
+            }
     </style>
 
 }
@@ -63,12 +89,17 @@
     @*access token : pk.eyJ1IjoibW9zaGl1cmNzZSIsImEiOiJjazE0Z3R3eHowaW1xM21weW9lc283ODR5In0.CVXnj83FaFxqx897botGig*@
 
     <script src="~/lib/leaflet/leaflet.js"></script>
-    <script src="~/maps/map_data/Division1.js"></script>
-   
-    <script src="~/maps/map_data/DistrictWGS.js"></script>
+    @*<script src="~/maps/map_data/Division1.js"></script>*@
+    @*<script src="~/maps/map_data/boundary/division.js"></script>*@
+    @*<script src="~/maps/map_data/boundary/district.js"></script>*@
+    @*<script src="~/maps/map_data/boundary/upazila.js"></script>*@
+
+    <script src="~/maps/map_data/boundary/upazilaMain.js"></script>
+
+    @*<script src="~/maps/map_data/districtMain.js"></script>*@
     <script>
 
-
+        var geojson;
         var mymap = L.map('mapid').setView([23.777176, 90.399452], 7);
 
         //var mymap = L.map('mapid').setView([-104.03, 45.94], 7);
@@ -93,120 +124,156 @@
 
 
 
-        //var googleLayer = new L.Google('ROADMAP');
-        //mymap.addLayer(googleLayer);
 
 
-        //var marker = L.marker([23.777176, 90.399452]).addTo(mymap);
+        //console.log("OK", upazila.features);
 
-        //var circle = L.circle([23.77, 90.3], {
-        //    color: 'red',
-        //    fillColor: '#f03',
-        //    fillOpacity: 0.5,
-        //    radius: 500
+        //upazila.features[0].properties.THACODE
+
+        for (var i = 0; i < upazila.features.length; i++) {
+            console.log("Thana Code: ", upazila.features[i].properties.THACODE);
+        }
+
+
+
+        //L.geoJSON(upazila.features, {
+        //    style: function (feature) {
+
+        //        switch (feature.properties.party) {
+        //            case 'Republican': return { color: "#ff0000" };
+        //            case 'Democrat': return { color: "#0000ff" };
+        //        }
+        //    },
+
         //}).addTo(mymap);
 
-        //var dataLayerPath = "../js/maps/map_data/" + dataAdminCode + ".json",
 
-        //var dataLayerPath = "../js/maps/map_data/div.json";
-
-        //console.log(dataLayerPath);
-
-
-
-
-        //var polygon = L.polygon([
-        //    [23.77, 90.39],
-        //    [23.777, 90.399],
-        //    [23.7771, 90.3994]
-        //]).addTo(mymap);
-
-
-        //RMO
-        //var data = $.getJSON("../maps/map_data/Division.json");
-
-        var geojson;
-
-        $.getJSON('../maps/map_data/Division.json', function (data1) {
-
-            geojson = data1;
-            
-        });
-        
-        console.log("OK", district.features);
-
-
-        //console.log("OK", JSON.parse(geojson));
-        //$.getJSON('https://raw.githubusercontent.com/moshiur-cegis/jsonData/master/DistrictWGS.json', function (data) {
-        //    console.log("OK", data);
-        //});
-
-
-        L.geoJSON(district.features, {
-            style: function (feature) {
-                switch (feature.properties.party) {
-                    case 'Republican': return { color: "#ff0000" };
-                    case 'Democrat': return { color: "#0000ff" };
-                }
-            }
-        }).addTo(mymap);
-
-        //../js/maps/map_data/
-
-        //$.getJSON("test.json");
-
-        //console.log("OK",geojson);
-
-
-        var states = [{
-            "type": "Feature",
-            "properties": { "party": "Republican" },
-            "geometry": {
-                "type": "Polygon",
-                "coordinates": [[
-                    [-104.05, 48.99],
-                    [-97.22, 48.98],
-                    [-96.58, 45.94],
-                    [-104.03, 45.94],
-                    [-104.05, 48.99]
-                ]]
-            }
-        }, {
-            "type": "Feature",
-            "properties": { "party": "Democrat" },
-            "geometry": {
-                "type": "Polygon",
-                "coordinates": [[
-                    [-109.05, 41.00],
-                    [-102.06, 40.99],
-                    [-102.03, 36.99],
-                    [-109.04, 36.99],
-                    [-109.05, 41.00]
-                ]]
-            }
-        }];
-
-        //console.log("OK",states);
-
-        L.geoJSON(states, {
-            style: function (feature) {
-                switch (feature.properties.party) {
-                    case 'Republican': return { color: "#ff0000" };
-                    case 'Democrat': return { color: "#0000ff" };
-                }
-            }
+        geojson = L.geoJson(upazila.features, {
+            style: style,
+            onEachFeature: onEachFeature
         }).addTo(mymap);
 
 
 
+        function getColor(d) {
+            return parseInt(100409) > 1000 ? '#800026' :
+                d > 500 ? '#BD0026' :
+                    d > 200 ? '#E31A1C' :
+                        d > 100 ? '#FC4E2A' :
+                            d > 50 ? '#FD8D3C' :
+                                d > 20 ? '#FEB24C' :
+                                    d > 10 ? '#FED976' :
+                                        '#FFEDA0';
+        }
+
+        function style(feature) {
+
+            // console.log("OK", feature);
+            return {
+                //fillColor: getColor(feature.properties.THACODE),
+                weight: 1,
+                opacity: 1,
+                color: '#5FA961',
+                dashArray: '1',
+                fillOpacity: 0.1
+            };
+        }
+
+        function onEachFeature(feature, layer) {
+            layer.on({
+                mouseover: highlightFeature,
+                mouseout: resetHighlight,
+                click: zoomToFeature
+            });
+        }
+
+        function highlightFeature(e) {
+            var layer = e.target;
+
+            layer.setStyle({
+                weight: 5,
+                color: '#E11F21',
+                dashArray: '',
+                fillOpacity: 0.4
+            });
+
+            info.update(layer.feature.properties);
+
+            if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
+                layer.bringToFront();
+            }
+        }
+
+        function resetHighlight(e) {
+            //style(e.target);
 
 
-                //marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
-                //circle.bindPopup("I am a circle.");
-                //polygon.bindPopup("I am a polygon.");
+            //layer.setStyle({
+            //    weight: 5,
+            //    color: '#f00',
+            //    dashArray: '',
+            //    fillOpacity: 0.7
+            //});
+            geojson.resetStyle(e.target);
+            info.update();
+
+        }
+
+        function zoomToFeature(e) {
+            mymap.fitBounds(e.target.getBounds());
+        }
+
+
+        var legend = L.control({ position: 'bottomright' });
+
+        legend.onAdd = function (map) {
+
+            var div = L.DomUtil.create('div', 'info legend'),
+                grades = [0, 10, 20, 50, 100, 200, 500, 1000],
+                labels = [];
+
+            // loop through our density intervals and generate a label with a colored square for each interval
+            for (var i = 0; i < grades.length; i++) {
+                div.innerHTML +=
+                    '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
+                    grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+            }
+
+            return div;
+        };
+
+        legend.addTo(mymap);
+
+
+        //Pop Up Window
+
+        var info = L.control();
+
+
+        info.onAdd = function (map) {
+            this._div = L.DomUtil.create('div', 'info'); // create a div with a class "info"
+            this.update();
+            return this._div;
+        };
+
+        // method that we will use to update the control based on feature properties passed
+
+        info.update = function (props) {
+            this._div.innerHTML = '<h4>Bangladesh Lat Long</h4>' + (props ?
+                '<b>' + props.name + '</b><br />' + props.density + ' people / mi<sup>2</sup>'
+                : 'Hover over a state');
+        };
+
+        info.addTo(mymap);
+
+
+
+                                                        //marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+                                                        //circle.bindPopup("I am a circle.");
+                                                        //polygon.bindPopup("I am a polygon.");
 
 
     </script>
-    @*/styles/v1/{username}/{style_id}/tiles/{tilesize}/{z}/{x}/{y}{@2x}*@
+
 
 }
