--- a/Views/Home/MapView.cshtml
+++ b/Views/Home/MapView.cshtml
@@ -94,19 +94,14 @@
     @*<script src="~/maps/map_data/boundary/district.js"></script>*@
     @*<script src="~/maps/map_data/boundary/upazila.js"></script>*@
 
-    <script src="~/maps/map_data/boundary/upazilaMain.js"></script>
-
+    @*<script src="~/maps/map_data/boundary/upazilaMain.js"></script>*@
+    <script src="~/maps/map_data/boundary/District_WGS84.js"></script>
     @*<script src="~/maps/map_data/districtMain.js"></script>*@
     <script>
 
         var geojson;
         var mymap = L.map('mapid').setView([23.777176, 90.399452], 7);
-
-        //var mymap = L.map('mapid').setView([-104.03, 45.94], 7);
-
-
-
-        //var mymap = new L.Map('mapid', {center: new L.LatLng(51.51, -0.11), zoom: 9});
+  
 
         //L.tileLayer('https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/512/1/1/0@2x?access_token=pk.eyJ1IjoibW9zaGl1cmNzZSIsImEiOiJjazExcGZ4bjAwaXltM2NyaDdhajlyd2FkIn0.c_SEmtkCpdNmBpogXYkUng', {
         //    //attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
@@ -126,16 +121,16 @@
 
 
 
-        //console.log("OK", upazila.features);
+        //console.log("OK", district.features);
 
         //upazila.features[0].properties.THACODE
 
-        for (var i = 0; i < upazila.features.length; i++) {
-            console.log("Thana Code: ", upazila.features[i].properties.THACODE);
-        }
+        //for (var i = 0; i < district.features.length; i++) {
+        //    console.log("Thana Code: ", district.features[i].properties.TOTAL);
+        //}
 
 
-
+       
         //L.geoJSON(upazila.features, {
         //    style: function (feature) {
 
@@ -148,7 +143,7 @@
         //}).addTo(mymap);
 
 
-        geojson = L.geoJson(upazila.features, {
+        geojson = L.geoJson(district.features, {
             style: style,
             onEachFeature: onEachFeature
         }).addTo(mymap);
@@ -156,26 +151,30 @@
 
 
         function getColor(d) {
-            return parseInt(100409) > 1000 ? '#800026' :
-                d > 500 ? '#BD0026' :
-                    d > 200 ? '#E31A1C' :
-                        d > 100 ? '#FC4E2A' :
-                            d > 50 ? '#FD8D3C' :
-                                d > 20 ? '#FEB24C' :
-                                    d > 10 ? '#FED976' :
+            return d > 1500000 ? '#800026' :
+                d > 1400000 ? '#BD0026' :
+                    d > 1200000 ? '#E31A1C' :
+                        d > 1000000 ? '#FC4E2A' :
+                            d > 800000 ? '#FD8D3C' :
+                                d > 600000 ? '#FEB24C' :
+                                    d > 400000 ? '#FED976' :
                                         '#FFEDA0';
         }
 
+
+        // grades = [0, 400000, 600000, 800000, 1000000, 1200000, 1400000, 1500000],
+
         function style(feature) {
 
-            // console.log("OK", feature);
+             console.log("feature", feature);
             return {
-                //fillColor: getColor(feature.properties.THACODE),
+                fillColor: getColor(feature.properties.TOTAL),
                 weight: 1,
                 opacity: 1,
-                color: '#5FA961',
+                //color: '#5FB961',
+                color: getColor(feature.properties.TOTAL),
                 dashArray: '1',
-                fillOpacity: 0.1
+                fillOpacity: 0.5
             };
         }
 
@@ -229,14 +228,17 @@
         legend.onAdd = function (map) {
 
             var div = L.DomUtil.create('div', 'info legend'),
-                grades = [0, 10, 20, 50, 100, 200, 500, 1000],
+                grades = [0, 400000, 600000, 800000, 1000000, 1200000, 1400000, 1500000],
                 labels = [];
 
             // loop through our density intervals and generate a label with a colored square for each interval
+
             for (var i = 0; i < grades.length; i++) {
+
                 div.innerHTML +=
-                    '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
-                    grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+                    '<p><i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
+
+                    grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '</p>' : '+');
             }
 
             return div;
@@ -249,7 +251,6 @@
 
         var info = L.control();
 
-
         info.onAdd = function (map) {
             this._div = L.DomUtil.create('div', 'info'); // create a div with a class "info"
             this.update();
@@ -259,14 +260,13 @@
         // method that we will use to update the control based on feature properties passed
 
         info.update = function (props) {
-            this._div.innerHTML = '<h4>Bangladesh Lat Long</h4>' + (props ?
-                '<b>' + props.name + '</b><br />' + props.density + ' people / mi<sup>2</sup>'
-                : 'Hover over a state');
+            this._div.innerHTML = '<h4>Bangladesh Populatoin</h4>' + (props ?
+                '<b>' + props.DISTNAME + '</b> : ' + props.TOTAL + ' people'  /// mi<sup>2</sup>
+                : 'Hover over a district');
         };
 
+
         info.addTo(mymap);
-
-
 
                                                         //marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
                                                         //circle.bindPopup("I am a circle.");
