--- a/Views/Home/MapView.cshtml
+++ b/Views/Home/MapView.cshtml
@@ -216,6 +216,8 @@
             geojson.resetStyle(e.target);
             info.update();
 
+            //sdfdsf
+
         }
 
         function zoomToFeature(e) {
