--- a/Views/Home/MapView.cshtml
+++ b/Views/Home/MapView.cshtml
@@ -5,8 +5,9 @@
 
 @section Styles {
 
-
+    <link href="~/css/datastyle.css" rel="stylesheet" />
     <link href="~/lib/leaflet/leaflet.css" rel="stylesheet" />
+
     <style>
 
         .leaflet-popup-content {
@@ -82,7 +83,36 @@
 
 }
 
-<div id="mapid"></div>
+<div class="row">
+    <div class="col-md-4">
+        <div class="mr-1">
+            <div class="form-view" id="updatePanel">
+                <div id="multi-form-wrapper" class="data-view multi-form-wrapper">
+                    <div class="mr-1">
+                        <h3>Selection Panel</h3>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-8">
+        <div class="mr-1">
+            <div class="form-view" id="updatePanel">
+                <div id="multi-form-wrapper" class="data-view multi-form-wrapper">
+
+                    <div id="mapid"></div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
+
 
 @section Scripts {
 
@@ -100,8 +130,8 @@
     <script>
 
         var geojson;
-        var mymap = L.map('mapid').setView([23.777176, 90.399452], 7);
-  
+        var mymap = L.map('mapid').setView([23.777176, 90.399452], 6);
+
 
         //L.tileLayer('https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/512/1/1/0@2x?access_token=pk.eyJ1IjoibW9zaGl1cmNzZSIsImEiOiJjazExcGZ4bjAwaXltM2NyaDdhajlyd2FkIn0.c_SEmtkCpdNmBpogXYkUng', {
         //    //attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
@@ -130,7 +160,7 @@
         //}
 
 
-       
+
         //L.geoJSON(upazila.features, {
         //    style: function (feature) {
 
@@ -166,7 +196,7 @@
 
         function style(feature) {
 
-             console.log("feature", feature);
+            console.log("feature", feature);
             return {
                 fillColor: getColor(feature.properties.TOTAL),
                 weight: 1,
@@ -262,7 +292,7 @@
         // method that we will use to update the control based on feature properties passed
 
         info.update = function (props) {
-            this._div.innerHTML = '<h4>Bangladesh Populatoin</h4>' + (props ?
+            this._div.innerHTML = '<h6>Bangladesh Populatoin</h6>' + (props ?
                 '<b>' + props.DISTNAME + '</b> : ' + props.TOTAL + ' people'  /// mi<sup>2</sup>
                 : 'Hover over a district');
         };
@@ -270,9 +300,9 @@
 
         info.addTo(mymap);
 
-                                                        //marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
-                                                        //circle.bindPopup("I am a circle.");
-                                                        //polygon.bindPopup("I am a polygon.");
+                                                                                                                                                                //marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+                                                                                                                                                                //circle.bindPopup("I am a circle.");
+                                                                                                                                                                //polygon.bindPopup("I am a polygon.");
 
 
     </script>
